removed a lot of class of rows and fix missing scrollbar for node tree

--- a/css/app.css
+++ b/css/app.css
@@ -201,8 +201,7 @@ h5 {
 }*/
 
 #sidebarContainer {
-    overflow-x: hidden;
-		/*overflow-y: auto;*/
+	/*overflow-y: auto;*/
     height: inherit;
 }
 /*
